--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 #- argocd/instance/ibm-vault-deploy.yaml
 
 ## Cloud Pak for Integration
-- argocd/operators/ibm-ace-operator.yaml
+#- argocd/operators/ibm-ace-operator.yaml
 #- argocd/operators/ibm-apic-operator.yaml
 #- argocd/instances/ibm-apic-instance.yaml
 #- argocd/instances/ibm-apic-management-portal-instance.yaml
@@ -67,9 +67,9 @@ resources:
 #- argocd/instances/ibm-cp4sthreatmanagements-instance.yaml
 
 ## IBM Foundational Services / Common Services
-- argocd/operators/ibm-foundations.yaml
-- argocd/instances/ibm-foundational-services-instance.yaml
-- argocd/operators/ibm-automation-foundation-core-operator.yaml
+#- argocd/operators/ibm-foundations.yaml
+#- argocd/instances/ibm-foundational-services-instance.yaml
+#- argocd/operators/ibm-automation-foundation-core-operator.yaml
 #- argocd/operators/ibm-automation-foundation-operator.yaml
 - argocd/operators/ibm-license-service-operator.yaml
 - argocd/instances/ibm-license-service-instance.yaml
